# assistant

./: .gitignore  404.html  AGENTS.md  AGENTS.yaml  CNAME  DECISIONS.md  LICENSE  MANIFESTO.md  README.md  example.config.yaml  example.config.yml  example.secrets.yaml  index.html  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: auto-fix.yml  ci.yml  test.yml
api/: index.html
app/: AGENTS.md  AGENTS.yaml  automations.py  chat.py  chat_routes.py  classify.py  cli.py  config.py  conversation_store.py  doctor.py  evaluate.py  github_store.py  human_log.py  llm.py  loader.py  mail.py  main.py  queue.py  queue_policy.py  result_routes.py  runtime_init.py  scheduler.py  setup.py  store.py  supervisor.py  worker.py
app/actions/: __init__.py  script.py
app/integrations/: AGENTS.md  AGENTS.yaml  __init__.py  conditions.py
app/integrations/email/: README.md  __init__.py  act.py  actions.py  check.py  classify.py  collect.py  evaluate.py  mail.py  manifest.yaml  store.py
app/integrations/email/templates/: classify_email.jinja
app/integrations/gemini/: client.py  manifest.yaml
app/integrations/gemini/actions/: prompt.py  research.py
app/integrations/github/: README.md  __init__.py  check.py  classify_pr.py  client.py  collect.py  const.py  entity_store.py  evaluate.py  manifest.yaml  store.py  update_prs.py
app/integrations/github/templates/: classify_github_pr.jinja
app/tasks/: check_email.py  classify_email.py  classify_github_pr.py  update_github_prs.py
app/tasks/templates/: classify_email.jinja
app/templates/: action_prompt.jinja
app/ui/: presenters.py  routes.py  yaml_rw.py
app/ui/templates/: base.html  config.html  dashboard.html  logs.html  queue.html  restart.html
app/ui/templates/partials/: _config_banner.html
architecture/human-log/: index.html
architecture/overview/: index.html
architecture/safety-model/: index.html
architecture/web-ui/: index.html
code-quality-tools/: index.html
design/: index.html
development/: index.html
docs/: api.md  code-quality-tools.md  development.md  index.md  install.sh  mkdocs.yml  why.md
docs/architecture/: human-log.md  overview.md  safety-model.md  web-ui.md
docs/testing/: guide.md  philosophy.md
gaas-bot/: DECISIONS.md  README.md  example.env  pyproject.toml
gaas-bot/src/gaas_bot/: __main__.py  cli.py
gaas-bot/src/gaas_bot/commands/: audit.py  resolve.py
gaas-bot/src/gaas_bot/core/: agent.py  git.py  github.py  templates.py
gaas-bot/src/gaas_bot/models/: audit.py  resolve.py
gaas-bot/src/gaas_bot/templates/: _labels.md.j2  _personality.md.j2  audit_docs.md.j2  audit_refactor.md.j2  audit_tests.md.j2  resolve_comment.md.j2  resolve_docs.md.j2  resolve_eval.md.j2  resolve_eval_comment.md.j2  resolve_implement.md.j2  resolve_pr.md.j2  resolve_triage.md.j2
gaas-bot/tests/: test_audit.py  test_cli.py  test_models.py  test_templates.py
scripts/: refactor_audit_prompt.md.j2
search/: search_index.json
testing/guide/: index.html
testing/philosophy/: index.html
tests/: AGENTS.md  AGENTS.yaml  conftest.py  test_actions.py  test_automations.py  test_chat.py  test_chat_routes.py  test_cli.py  test_config.py  test_conversation_store.py  test_llm.py  test_loader.py  test_queue.py  test_queue_policy.py  test_result_routes.py  test_script_execution.py  test_sdk.py  test_services.py  test_store.py  test_supervisor.py  test_ui_presenters.py  test_ui_routes.py  test_worker.py  test_yaml_rw.py
tests/integrations/email/: test_act.py  test_classify.py  test_email_store.py
tests/integrations/gemini/: test_research.py
tests/integrations/github/: test_evaluate.py
tests/safety/: test_automation_invariants.py  test_chaos.py  test_provenance.py  test_reference_validation.py
why/: index.html
