[project]
name = "assistant"
version = "0.1.0"
description = "AI-powered personal assistant — email, PRs, issues, safely"
requires-python = ">=3.11"
dependencies = [
    "assistant-sdk",
    "assistant-email",
    "assistant-github",
    "assistant-gemini",
    "fastapi[standard]>=0.129.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.23",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "fastapi-crons>=0.2",
    "ruamel.yaml>=0.18",
]

[project.scripts]
assistant = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "complexipy>=5.2.0",
    "radon>=6.0",
    "vulture>=2.11",
    "deptry>=0.16",
    "import-linter>=2.0",
    "bandit>=1.7",
    "ruff>=0.4",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.uv.sources]
assistant-sdk = { path = "packages/assistant-sdk", editable = true }
assistant-email = { path = "packages/assistant-email", editable = true }
assistant-github = { path = "packages/assistant-github", editable = true }
assistant-gemini = { path = "packages/assistant-gemini", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages/assistant-email/tests", "packages/assistant-gemini/tests", "packages/assistant-github/tests", "packages/assistant-sdk/tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
exclude = ["packages/assistant-gemini/", "packages/.*/tests/"]
explicit_package_bases = true
mypy_path = ["packages/assistant-sdk/src", "packages/assistant-email/src"]

[[tool.mypy.overrides]]
module = "assistant_sdk.*"
strict = true

[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = [
    "imap_tools.*",
    "icalendar.*",
    "frontmatter.*",
    "fastapi_crons.*",
    "ruamel.*",
    "complexipy.*",
    "bs4.*",
]
ignore_missing_imports = true

[tool.importlinter]
root_packages = ["app", "assistant_sdk", "assistant_email", "assistant_github", "assistant_gemini"]

[[tool.importlinter.contracts]]
name = "SDK does not import app"
type = "forbidden"
source_modules = ["assistant_sdk"]
forbidden_modules = ["app"]

[[tool.importlinter.contracts]]
name = "Integrations do not import app"
type = "forbidden"
source_modules = ["assistant_email", "assistant_github", "assistant_gemini"]
forbidden_modules = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "ANN", "UP", "RUF", "B", "SIM"]
ignore = ["ANN401", "ANN204"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
"packages/*/tests/**/*.py" = ["ANN"]
"app/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202"]
"packages/assistant-email/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202"]
"packages/assistant-github/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202"]
"packages/assistant-gemini/**/*.py" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
